try fix input date on mobile

--- a/src/scss/form/__inputDate.scss
+++ b/src/scss/form/__inputDate.scss
@@ -25,17 +25,19 @@
 
         &:invalid {
             &::after {
-                position: relative;
+                position: absolute;
 
                 left: 0;
-                
+
                 display: block;
 
                 content: 'ДД.ММ.ГГГГ';
+
+                padding: inherit;
             }
 
             &::-webkit-datetime-edit {
-                display: none;
+                visibility: hidden;
             }
         }
 
@@ -45,7 +47,7 @@
             }
 
             &::-webkit-datetime-edit {
-                display: block;
+                visibility: visible;
             }
         }
     
